<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/username_hint"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layoutProfilePicture"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageViewProfilePicture"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:background="@mipmap/profiledummy" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutPost"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewProfilePostNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/posts_hint"
                    android:textAlignment="center"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/textViewProfilePostHint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/posts"
                    android:textAlignment="center"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutFollowers"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewProfileFollowersNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/followers_hint"
                    android:textAlignment="center"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/textViewProfileFollowersHint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    android:textAlignment="center"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutFollowing"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewProfileFollowingNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/following_hint"
                    android:textAlignment="center"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/textViewProfileFollowingHint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/following"
                    android:textAlignment="center"
                    android:textColor="#000000"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/buttonProfileEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/edit_profile" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@mipmap/instapic" />


    </LinearLayout>

</FrameLayout>